# clawfirm

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  go.mod
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml  sbom.yml
benchmarks/: README.md
benchmarks/inference/: README.md
benchmarks/routing/: README.md
cmd/clawfirm/: main.go
deploy/: clawboot.env.example  install.sh
deploy/airgap/: README.md  bundle.sh  verify.sh
deploy/solo/: .env.example  Caddyfile  README.md  docker-compose.gpu.yml  docker-compose.yml
docs/adr/: 0000-template.md  0001-three-tier-single-distribution.md  0002-k3s-for-smb-k0s-for-enterprise.md  0003-tiered-sandbox.md  0004-in-house-mcp-gateway.md  0005-reuse-sister-repos.md  0006-ollama-and-vllm.md  README.md
docs/architecture/: governance-ladder.md  memory-service.md  overview.md  reference-architecture.md  routing-logic.md
docs/install/: airgap.md  enterprise.md  smb.md  solo.md
docs/operations/: backup-restore.md  observability.md  teardown.md  (+1 more)
examples/: README.md
scripts/: airgap-build.sh  doctor.sh  install.sh  uninstall.sh  verify-signatures.sh
services/memory-service/: Dockerfile  README.md  pyproject.toml
services/memory-service/memory_service/: __init__.py  api.py  events.py  rag.py  tree.py
services/memory-service/memory_service/stores/: __init__.py  lancedb.py  pgvector.py  qdrant.py
services/memory-service/proto/: memory.proto
skills/: README.md
tests/: README.md
(+92 files in other folders)
